# iio_utils

./: .gitignore  Makefile.am  configure.ac
src/: iio_event_monitor.c  lsiio.c
yocto/recipes-utils/iioutils/: iioutils_0.2.bb
